@@ -8,6 +8,10 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_02-dev
 
+fix bug that would hose child if a croak() happened, be it from a
+syntax error, Carp::croak(), etc.  remove child_terminate() hack that
+was blaming the Perl stack being corrupt
+
 Apache::StatINC can now be configured to write debug stuff with
 a PerlSetVar [Ask Bjoern Hansen <ask@netcetera.dk>]
 
